[gd_scene load_steps=4 format=3 uid="uid://cnhvaqc7hgkd1"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_k38dk"]
[ext_resource type="Texture2D" path="res://assets/player/player.svg" id="2_3nyhj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sya0v"]
radius = 30.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_k38dk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_3nyhj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sya0v")

[node name="BulletSpawn" type="Marker2D" parent="."]
position = Vector2(40, 0)

[node name="FireRateTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="FireRateTimer" to="." method="_on_fire_rate_timer_timeout"]